lintian (2.5.32) UNRELEASED; urgency=medium

  XXX: generate tag summary

  * checks/cruft.{desc,pm}:
    + [BR] Detect non free lenna file based on filename and filetype.
      (Closes: #771191).
  * checks/changes-file.{desc,pm}:
    + [NT] Downgrade backports-changes-missing to a wishlist (I) tag.
      Thanks to Vincent Cheng for the report.  (Closes: #785084)
  * checks/files.pm:
    + [NT] Apply patch from Tomasz Buchert to avoid false-positive
      package-contains-timestamped-gzip in some cases.
      (Closes: #762105)
    + [BR] Detects // tricks in privacy breach test.
      (Closes: #786362)
    + [BR] Apply patch from Lisandro Damián Nicanor Pérez Meyer
      for detecting private cmake file.
      (Closes: #785329).
    + [BR] Detect package shipping apt_preferences(5) file.
      (Closes: #786533).
    + [BR] Detect package shipping oui or iab ieee database.
    + [NT] Add a check for packages without intermediate
      directories.
  * checks/manpages.{desc,pm}:
    + [NT] Retire the hyphen-used-as-minus-sign tag as upstream now
      renders both "-" and "\-" as HYPHEN-MINUS.  (Closes: #785353)
  * checks/source-copyright.pm:
    + [NT] Apply patch from Evgeni Golov to permit multiple
      different "public-domain licenses", as they are expected to
      describe what something is in public domain.
      (Closes: #787248)

  * collection/{debfiles,doc-base-files,init.d,menu-files}{,.desc}:
    + [NT] Remove deprecated and unused collections.  These were
      deprecated in 2.5.28.  Note that debfiles was omitted in the
      deprecation list by mistake in the original 2.5.28 release.
  * collection/unpacked:
    + [NT] Apply patch from Tomasz Buchert to extract the full time
      in UTC.

  * commands/reporting-sync-state.pm:
    + [NT] Read mirror files as UTF-8 files to avoid mojibake in
      maintainer names.  Once again, thanks to Andreas Rönnquist
      for the report.

  * data/fields/archive-sections: