@@ -1,0 +1,1 @@
+E: changelog-file-empty-entry: changelog-empty-entry
